--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,7 @@
-@charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 /* ==========================================================================
    1. CSS Reset Code
    ========================================================================== */
-
 /* 1.1. Eric Meyers Reset
    http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
@@ -119,15 +117,14 @@ html {
 }
 
 /* Align radios and text inputs with their label */
-
-input[type='radio'] {
+input[type=radio] {
   vertical-align: text-bottom;
 }
 
 /* Hand cursor on clickable input elements */
 label,
-input[type='button'],
-input[type='submit'],
+input[type=button],
+input[type=submit],
 button {
   cursor: pointer;
 }
@@ -157,16 +154,15 @@ sup {
 }
 
 sup {
-  top: -.7em;
+  top: -0.7em;
 }
 
 sub {
-  bottom: -.25em;
+  bottom: -0.25em;
 }
 
 /* 1.2. Clear Fix
    ========================== */
-
 .cf:before,
 .cf:after {
   display: table;
@@ -182,15 +178,17 @@ sub {
 }
 
 /*for all*/
-*,*::before,*::after {
+*, *::before, *::after {
   padding: 0;
   margin: 0;
-  @include box-sizing(border-box);
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-  @include box-sizing(border-box);
-  font-family: 'Poppins', sans-serif;;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 a {
@@ -209,3 +207,8 @@ li {
   width: 95%;
   margin: 0 auto;
 }
+
+/* header start */
+/* header end */
+
+/*# sourceMappingURL=style.css.map */
