--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -1,3 +1,140 @@
 /* header start */ 
+header {
+  .wrapper {
+    width: 100%;
+    @extend %flex;
+  }
 
+  @at-root {
+    .header-content {
+      @include flex-basis(75%);
+    }
+
+    /* header top start */ 
+    .header-contact {
+      @extend %flex;
+      gap: 10px;
+
+      a {
+        padding: 0 10px;
+        @include position($position: relative);
+        @include color(black-color);
+        @include font($size: 11px, $weight: 600,);
+
+        &::before {
+          @extend %left-icon;
+          @include color(orange-color);
+        }
+      }
+    }
+
+    .header-mail::before {
+      content: "\f0e0";
+    }
+
+    .call-icon::before {
+      content: "\f095";
+    }
+    
+    .header-top {
+      padding: 6px 3.3%;
+      @extend %flex;
+      @include align-items(center);
+      @include justify-content(space-between);
+      @include background(grey-color);
+
+    }
+
+    .social-items {
+      @extend %flex;
+      gap: 5px;
+
+      a {
+        width: 27px;
+        height: 27px;;
+        border-radius: 50%;
+        @include display(block);
+        @include position($position: relative);
+        text-indent: -9999px;
+        @include background(icon-background);
+        @include color(black-color);
+
+        &::before {
+          @extend %icon;
+          @include font($size: 12px);
+          text-indent: 0;
+        }
+      }
+    }
+
+    @include onlyIcon($headerIcon);
+    /* header top end */
+
+    /* header bottom start */
+    /* hamburger start */
+    .hamburger {
+      width: 35px;
+      height: 35px;
+      border: 1px solid #ffffff;
+      border-radius: 2px;
+      @include position($position: relative);
+      @include display(none);
+      cursor: pointer;
+    }
+
+    .bar {
+      width: 50%;
+      height: 2px;
+      border-radius: 4px;
+      @include position($position: absolute, $top: 50%, $left: 50%);
+      @include display(inline-block);
+      @include background(white-color);
+      text-indent: -99999px;
+      @extend %transition;
+      @extend %transform-center;
+    }
+
+    .bar::before,
+    .bar::after {
+      content: "";
+      @include position(100%, inherit, $position: absolute, $left: 0);
+      background-color: inherit;
+      @extend %transition;
+    }
+
+    .bar::before {
+      @include position($top: -6px);
+    }
+
+    .bar::after {
+      @include position($top: 6px);
+    }
+
+    .hamburger:hover .bar {
+      @include transform(translate(-50%, -50%) rotate(45deg));
+    }
+
+    .hamburger:hover .bar::before {
+      @include transform(translateY(6px) rotate(0));
+    }
+
+    .hamburger:hover .bar::after {
+      @include transform(translateY(-6px) rotate(-90deg));
+    }
+    /* hamburger end */
+
+    .header-bottom {
+      padding: 15px 3.3%;
+      @extend %flex;
+      @include align-items(center);
+      @include justify-content(space-between);
+    }
+
+    nav {
+      @include flex-basis(80%);
+    }
+    /* header bottom end */
+
+  }
+}
 /* header end */ 
