--- a/assets/sass/_placeholder.scss
+++ b/assets/sass/_placeholder.scss
@@ -19,3 +19,8 @@
   @include icon($position: absolute, $top: 50%, $left: 50%);
   @extend %transform-center;
 }
+
+%left-icon {
+  @include icon($position: absolute, $top: 45%, $left: 0);
+  @extend %transform-center;
+}
