--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -1,4 +1,4 @@
-$colors : (white-color: #fff, black-color: #000, orange-color: #FB5B21, grey-color: #BDBDBF, image-caption: #1F2025, top-background: #222329, bottom-background: #111111, icon-background: #F4F5F8);
+$colors : (white-color: #fff, black-color: #000, orange-color: #FB5B21, grey-color: #BDBDBF, image-caption: #1F2025, black-background: #222329, bottom-background: #111111, icon-background: #F4F5F8);
 
 $devices:(large-desktop: "1280px", desktop: "1024px", tablet: "995px", ipad: "768px", largePhone: "640px", mediumPhone: "480px", smallPhone: "320px");
 
