--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,7 +208,7 @@ li {
   margin: 0 auto;
 }
 
-.banner-btns, .banner-content, .nav-items, .header-bottom, .social-items, .header-top, .header-contact, header .wrapper {
+.trainer-items, .banner-btns, .banner-content, .nav-items, .header-bottom, .social-items, .header-top, .header-contact, header .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -515,5 +515,38 @@ nav {
 }
 
 /* banner section end */
+/* trainers section start */
+.trainers {
+  padding: 64px 0;
+}
+.section-heading {
+  text-align: center;
+}
+.section-heading span {
+  color: #FB5B21;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.section-heading h3 {
+  color: #222329;
+  font-size: 48px;
+  font-weight: 800;
+  text-transform: uppercase;
+  line-height: 1.3;
+}
+
+.trainer-items {
+  padding: 30px 0;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  gap: 34px;
+}
+.trainer-items li {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0 31.2%;
+  flex: 1 0 31.2%;
+}
+
+/* trainers section end */
 
 /*# sourceMappingURL=style.css.map */
