--- a/assets/sass/_placeholder.scss
+++ b/assets/sass/_placeholder.scss
@@ -24,3 +24,8 @@
   @include icon($position: absolute, $top: 45%, $left: 0);
   @extend %transform-center;
 }
+
+%flex-column {
+  @extend %flex;
+  @include flex-direction(column);
+}
