--- a/assets/sass/_trainers.scss
+++ b/assets/sass/_trainers.scss
@@ -32,6 +32,7 @@
         border-radius: 3px;
         @include flex(1, 0, 31.2%);
         overflow: hidden;
+        cursor: pointer;
 
         @include minResponsive(tablet) {
           &:hover img{
