--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,6 +299,13 @@ header .wrapper {
   justify-content: space-between;
   background: #BDBDBF;
 }
+@media only screen and (max-width: 768px) {
+  .header-top {
+    position: absolute;
+    top: 72px;
+    right: 0;
+  }
+}
 
 .social-items {
   gap: 5px;
@@ -324,6 +331,17 @@ header .wrapper {
 .social-items a::before {
   font-size: 12px;
   text-indent: 0;
+}
+@media only screen and (max-width: 768px) {
+  .social-items {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    position: absolute;
+    top: 50px;
+    right: 3%;
+  }
 }
 
 .facebook::before {
@@ -418,6 +436,12 @@ header .wrapper {
   justify-content: space-between;
   background: #222329;
 }
+@media only screen and (max-width: 768px) {
+  .header-bottom {
+    justify-content: end;
+    gap: 10px;
+  }
+}
 
 nav {
   -ms-flex-preferred-size: 80%;
@@ -466,8 +490,57 @@ nav {
     color: #FB5B21;
   }
 }
+@media only screen and (max-width: 768px) {
+  .header-btn a {
+    padding: 10px 23px;
+    font-size: 9px;
+  }
+}
 
 /* header bottom end */
+@media only screen and (max-width: 768px) {
+  .hamburger {
+    padding: 5px;
+    display: block;
+    z-index: 3;
+    -webkit-box-ordinal-group: 3;
+    -ms-flex-order: 2;
+    order: 2;
+  }
+  nav {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    z-index: 1;
+    top: -100%;
+    left: 0;
+    background: #000;
+    -webkit-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+  }
+  .hamburger:hover + nav {
+    top: 0;
+  }
+  .nav-items {
+    width: inherit;
+    height: inherit;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    gap: 20px;
+  }
+  .nav-items a {
+    font-size: 18px;
+  }
+}
 
 /* header end */
 /* banner section start */
@@ -491,6 +564,11 @@ nav {
   font-weight: 800;
   text-transform: uppercase;
 }
+@media only screen and (max-width: 768px) {
+  .banner-content h2 {
+    font-size: 38px;
+  }
+}
 
 .banner-btns {
   gap: 13px;
@@ -501,6 +579,11 @@ nav {
   font-size: 11px;
   font-weight: 600;
   text-transform: uppercase;
+}
+@media only screen and (max-width: 768px) {
+  .banner-btns a {
+    padding: 9px 19px;
+  }
 }
 
 .orange-btn {
