--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,6 +260,18 @@ header .wrapper {
   -ms-flex-preferred-size: 25%;
   flex-basis: 25%;
 }
+@media only screen and (max-width: 640px) {
+  .logo {
+    -ms-flex-preferred-size: 30%;
+    flex-basis: 30%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .logo {
+    -ms-flex-preferred-size: 50%;
+    flex-basis: 50%;
+  }
+}
 
 .header-content {
   -ms-flex-preferred-size: 75%;
@@ -302,7 +314,7 @@ header .wrapper {
 @media only screen and (max-width: 768px) {
   .header-top {
     position: absolute;
-    top: 72px;
+    top: 65px;
     right: 0;
   }
 }
@@ -496,6 +508,11 @@ nav {
     font-size: 9px;
   }
 }
+@media only screen and (max-width: 480px) {
+  .header-btn a {
+    display: none;
+  }
+}
 
 /* header bottom end */
 @media only screen and (max-width: 768px) {
@@ -558,6 +575,11 @@ nav {
   -ms-flex-direction: column;
   flex-direction: column;
 }
+@media only screen and (max-width: 480px) {
+  .banner-content {
+    padding: 74px 0;
+  }
+}
 .banner-content h2 {
   color: #fff;
   font-size: 55px;
@@ -567,6 +589,11 @@ nav {
 @media only screen and (max-width: 768px) {
   .banner-content h2 {
     font-size: 38px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .banner-content h2 {
+    font-size: 27px;
   }
 }
 
@@ -583,6 +610,12 @@ nav {
 @media only screen and (max-width: 768px) {
   .banner-btns a {
     padding: 9px 19px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .banner-btns a {
+    padding: 7px 15px;
+    font-size: 9px;
   }
 }
 
@@ -613,6 +646,11 @@ nav {
 .trainers {
   padding: 64px 0 40px;
 }
+@media only screen and (max-width: 320px) {
+  .trainers {
+    padding: 30px 0;
+  }
+}
 .section-heading {
   text-align: center;
 }
@@ -627,6 +665,16 @@ nav {
   font-weight: 800;
   text-transform: uppercase;
   line-height: 1.3;
+}
+@media only screen and (max-width: 768px) {
+  .section-heading h3 {
+    font-size: 30px;
+  }
+}
+@media only screen and (max-width: 320px) {
+  .section-heading h3 {
+    font-size: 21px;
+  }
 }
 
 .trainer-items {
@@ -648,6 +696,13 @@ nav {
     -webkit-transform: scale(1.1);
     -ms-transform: scale(1.1);
     transform: scale(1.1);
+  }
+}
+@media only screen and (max-width: 480px) {
+  .trainer-items li {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 100%;
+    flex: 1 0 100%;
   }
 }
 .trainer-items figure {
@@ -681,6 +736,11 @@ footer a {
   color: #BDBDBF;
   font-size: 11px;
 }
+@media only screen and (max-width: 768px) {
+  footer a {
+    font-size: 10px;
+  }
+}
 
 .footer-top {
   background: #222329;
@@ -689,19 +749,62 @@ footer a {
   padding: 30px 0 24px;
   position: relative;
 }
+@media only screen and (max-width: 995px) {
+  .footer-top .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+}
 .footer-top h5 {
   color: #fff;
   font-size: 18px;
   font-weight: 700;
   text-transform: uppercase;
 }
+@media only screen and (max-width: 768px) {
+  .footer-top h5 {
+    font-size: 14px;
+  }
+}
 .top-items {
   gap: 40px;
+}
+@media only screen and (max-width: 1280px) {
+  .top-items {
+    gap: 0;
+  }
+}
+@media only screen and (max-width: 995px) {
+  .top-items {
+    padding-bottom: 30px;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    gap: 50px;
+  }
+}
+@media only screen and (max-width: 640px) {
+  .top-items {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    text-align: center;
+  }
 }
 
 .top-list {
   -ms-flex-preferred-size: 20%;
   flex-basis: 20%;
+}
+@media only screen and (max-width: 640px) {
+  .top-list {
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+  }
 }
 
 .contact-items {
@@ -725,6 +828,11 @@ footer a {
 .contact-items p::before {
   content: "\f3c5";
   color: #FB5B21;
+}
+@media only screen and (max-width: 640px) {
+  .contact-items p {
+    display: inline-block;
+  }
 }
 
 .quick-items, .popular-items {
@@ -801,6 +909,14 @@ footer a {
   color: #fff;
   text-align: center;
 }
+@media only screen and (max-width: 995px) {
+  .newsletter {
+    width: 70%;
+    min-width: 300px;
+    margin: 0 auto;
+    position: static;
+  }
+}
 .newsletter h6 {
   padding-bottom: 8px;
   font-size: 18px;
@@ -872,11 +988,22 @@ form {
   color: #fff;
   font-weight: 600;
 }
+@media only screen and (max-width: 995px) {
+  .footer-bottom p {
+    margin: 0;
+    text-align: center;
+  }
+}
 .scroll-top-btn {
   position: absolute;
   right: 0;
   bottom: 0;
   cursor: pointer;
+}
+@media only screen and (max-width: 768px) {
+  .scroll-top-btn {
+    right: 5%;
+  }
 }
 .scroll-top-btn span {
   display: block;
