--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -10,6 +10,13 @@ header {
     .logo {
       @include align-self(center);
       @include flex-basis(25%);
+      
+      @include maxResponsive(largePhone) {      
+        @include flex-basis(30%);
+      }
+      @include maxResponsive(mediumPhone) {      
+        @include flex-basis(50%);
+      }
     }
 
     .header-content {
@@ -50,7 +57,7 @@ header {
       @include background(grey-color);
 
       @include maxResponsive(ipad) {
-        @include position($position: absolute, $top: 72px, $right: 0);
+        @include position($position: absolute, $top: 65px, $right: 0);
       }
 
     }
@@ -212,6 +219,10 @@ header {
         @include maxResponsive(ipad) {
           padding: 10px 23px;
           @include font($size: 9px);
+        }
+
+        @include maxResponsive(mediumPhone) {      
+          @include display(none);
         }
       }
     }
