--- a/assets/sass/_trainers.scss
+++ b/assets/sass/_trainers.scss
@@ -1,6 +1,10 @@
 /* trainers section start */ 
 .trainers {
   padding: 64px 0 40px;
+
+  @include maxResponsive(smallPhone) {
+    padding: 30px 0;
+  }
   
   @at-root {
     .section-heading {
@@ -15,6 +19,14 @@
         @include color(black-background);
         @include font($size: 48px, $weight: 800, $text: uppercase);
         line-height: 1.3;
+
+        @include maxResponsive(ipad) {
+          @include font($size: 30px);
+        }
+
+        @include maxResponsive(smallPhone) {
+          @include font($size: 21px);
+        }
       }
     }
 
@@ -33,11 +45,15 @@
         @include flex(1, 0, 31.2%);
         overflow: hidden;
         cursor: pointer;
-
+        
         @include minResponsive(tablet) {
           &:hover img{
             @include transform(scale(1.1));
           }
+        }
+        
+        @include maxResponsive(mediumPhone) {      
+          @include flex(1, 0, 100%);
         }
 
       }
